welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:34: error: expected class or object definition
def faireexo() {
^PatternPicture:43: error: expected start of definition
override def run() {
         ^PatternPicture:47: error: Unmatched closing brace '}' ignored here
}
^